--- a/.github/workflows/docs-CD.yml
+++ b/.github/workflows/docs-CD.yml
@@ -34,6 +34,6 @@ jobs:
         shell: julia --project=docs --color=yes {0}
         run: |
           using Documenter: DocMeta, doctest
-          using NShapes
-          DocMeta.setdocmeta!(NShapes, :DocTestSetup, :(using NShapes); recursive=true)
-          doctest(NShapes)
+          using Shapes
+          DocMeta.setdocmeta!(Shapes, :DocTestSetup, :(using Shapes); recursive=true)
+          doctest(Shapes)
